--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
-<app-post *ngFor="let post of posts" [post]="post" [postDeletable]="postDeletable" class="feed" (spinnerEvent)="spinner()"></app-post>
+<app-post *ngFor="let post of posts" [userId]="userId" [post]="post" [postDeletable]="postDeletable" class="feed" (spinnerEvent)="spinner()" (postDeleted)="deletePost($event)"></app-post>
+<mat-paginator *ngIf="posts.length > 0" [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"></mat-paginator>
 <mat-spinner *ngIf="showSpinner" style="margin: 0 auto; margin-top: 50px;" [diameter]="100"></mat-spinner>
