--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z8 app-toolbar">
+<mat-toolbar class="mat-elevation-z8 app-toolbar">
   <mat-toolbar-row>
     <button mat-button >
         <mat-icon >engineering</mat-icon>
