--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -55,7 +55,7 @@
                 <mat-hint align="end">{{pwInput.value?.length}} / 6</mat-hint>
                 <mat-error>Has to be at least 6 characters long.</mat-error>
             </mat-form-field>
-            <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid" *ngIf="!isLoading">Submit</button>
+            <button type="submit" mat-raised-button [style]="f.valid ? 'background-color: royalblue;': ''" [disabled]="f.invalid" *ngIf="!isLoading">Submit</button>
             <mat-spinner *ngIf="isLoading" [diameter]="40"></mat-spinner>
         </form>
     </mat-card>
