--- a/src/app/home/create-post/create-post.component.html
+++ b/src/app/home/create-post/create-post.component.html
@@ -28,7 +28,7 @@
                     #contentInput="ngModel">
                 <mat-error *ngIf="!contentInput.hasError('required')">Field must not be empty</mat-error>
             </mat-form-field>
-            <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid" *ngIf="!isLoading">Submit</button>
+            <button type="submit" mat-raised-button [style]="f.valid ? 'background-color: royalblue;': ''" [disabled]="f.invalid" *ngIf="!isLoading">Submit</button>
             <mat-spinner *ngIf="isLoading" [diameter]="40"></mat-spinner>
         </form>
     </mat-card>
