--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
   <mat-card-header>
     <mat-card-title>{{post?.title}}</mat-card-title>
-    <mat-card-subtitle>{{postCreator}}</mat-card-subtitle>
+    <mat-card-subtitle>{{post?.creatorName}}</mat-card-subtitle>
   </mat-card-header>
   
   <mat-card-content>
