--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -5,7 +5,7 @@
   </mat-card-header>
   
   <mat-card-content>
-    <p>
+    <p style="white-space: pre-wrap">
       {{post?.content}}
     </p>
   </mat-card-content>
