Added profile posts

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="example-container mat-elevation-z3">
-    <div fxLayout fxLayoutAlign="center center">
+    <div>
         <h1 style="text-align: center; margin: 0;">Login</h1>
     </div>
 </div>
