--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -8,8 +8,10 @@ table {
 }
 .container {
   width: 95;
-  margin: 10px;
+  margin: 5px;
   padding: 10px;
+  padding-top: 0;
+  margin-top: 0;
 }
 .example-form {
   min-width: 150px;
