--- a/src/app/home/post/delete-dialog/delete-dialog.component.html
+++ b/src/app/home/post/delete-dialog/delete-dialog.component.html
@@ -3,6 +3,6 @@
   You can not undo your action.
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="yes()">Yes</button>
+  <button mat-raised-button color="accent" (click)="yes()">Yes</button>
   <button mat-stroked-button (click)="no()">No</button>
 </div>
