--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <app-status (postCreated)="onStatusUpdate($event)"></app-status>
-<app-post *ngFor="let post of posts" [userId]="userId" [post]="post" [postDeletable]="postDeletable" class="feed" (spinnerEvent)="spinner()" (postDeleted)="deletePost($event)"></app-post>
+<app-post *ngFor="let post of posts" [userId]="userId" [post]="post" [postDeletable]="postDeletable" class="feed"
+  (spinnerEvent)="spinner()" (postDeleted)="deletePost($event)"></app-post>
 <mat-spinner *ngIf="showSpinner" style="margin: 0 auto; margin-top: 50px;" [diameter]="50"></mat-spinner>
-<mat-paginator *ngIf="posts.length > 0" [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"></mat-paginator>
-
+<mat-paginator *ngIf="posts.length > 0" [length]="totalPosts" [pageSize]="postsPerPage"
+  [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"></mat-paginator>
