--- a/src/app/home/status/status.component.css
+++ b/src/app/home/status/status.component.css
@@ -1,5 +1,5 @@
 .my-form {
-  width: 300px;
+  width: 400px;
   padding: 12px;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
   min-width: 200px;
 }
 
-mat-card {
+.card {
   margin: 10px auto;
   display: flex;
   justify-content: center;
