--- a/src/app/home/create-post/create-post.component.css
+++ b/src/app/home/create-post/create-post.component.css
@@ -25,3 +25,10 @@ mat-card {
 mat-spinner {
   margin: 0 auto;
 }
+.image-preview {
+  height: 5rem;
+  margin: 1rem 0;
+}
+.image-preview img {
+  height: 100%;
+}
