--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -1,5 +1,6 @@
 <mat-card class="example-card mat-elevation-z3">
   <mat-card-header>
+    <img mat-card-avatar class="example-header-image" [src]="'https://static.thenounproject.com/png/363640-200.png'" [alt]="'avatar'">
     <mat-card-title>{{post?.title}}</mat-card-title>
     <mat-card-subtitle>{{post?.creatorName}}</mat-card-subtitle>
   </mat-card-header>
