Added Comment  Support

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-status (postCreated)="onStatusUpdate($event)"></app-status>
-<app-post *ngFor="let post of posts" [userId]="userId" [post]="post" [postDeletable]="postDeletable" class="feed"
+<app-post *ngFor="let post of posts" [userId]="userId" [post]="post" [username]="username" [postDeletable]="postDeletable" (commentCreated)="onCommentCreated($event)" class="feed"
   (spinnerEvent)="spinner()" (postDeleted)="deletePost($event)"></app-post>
 <mat-spinner *ngIf="showSpinner" style="margin: 0 auto; margin-top: 50px;" [diameter]="50"></mat-spinner>
 <mat-paginator *ngIf="posts.length > 0" [length]="totalPosts" [pageSize]="postsPerPage"
