--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -1,24 +1,48 @@
-<mat-card class="example-card mat-elevation-z3">
-  <mat-card-header>
-    <img mat-card-avatar class="example-header-image" [src]="'https://static.thenounproject.com/png/363640-200.png'" [alt]="'avatar'">
-    <mat-card-title>{{post?.title}}</mat-card-title>
-    <mat-card-subtitle>{{post?.creatorName}}</mat-card-subtitle>
-    <mat-card-subtitle>{{date}}</mat-card-subtitle>
-  </mat-card-header>
-<img mat-card-image *ngIf="post?.imagePath" [src]="post?.imagePath" [alt]="post.title">
-  <mat-card-content>
-    <p style="white-space: pre-wrap">
-      {{post?.content}}
-    </p>
-  </mat-card-content>
-  <mat-card-actions style="display: flex;">
-    <button mat-stroked-button color="basic">LIKE</button>
-    <button mat-stroked-button color="basic">SHARE</button>
-    <button mat-raised-button color="primary" [routerLink]="['/edit/', post._id]"
-      *ngIf="postDeletable && userId == post.creator">EDIT</button>
-    <span class="menu-spacer"></span>
-    <button mat-mini-fab color="accent" (click)="deletePost()" *ngIf="postDeletable && userId == post.creator">
-      <mat-icon>delete</mat-icon>
-    </button>
-  </mat-card-actions>
-</mat-card>
+  <mat-card class="example-card mat-elevation-z3">
+    <mat-card-header>
+      <img mat-card-avatar class="example-header-image" [src]="'https://static.thenounproject.com/png/363640-200.png'" [alt]="'avatar'">
+      <mat-card-title>{{post?.title}}</mat-card-title>
+      <mat-card-subtitle>{{post?.creatorName}}</mat-card-subtitle>
+      <mat-card-subtitle>{{date}}</mat-card-subtitle>
+    </mat-card-header>
+  <img mat-card-image *ngIf="post?.imagePath" [src]="post?.imagePath" [alt]="post.title">
+    <mat-card-content>
+      <p style="white-space: pre-wrap">
+        {{post?.content}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions style="display: flex;">
+      <button mat-stroked-button color="basic">LIKE</button>
+      <button mat-stroked-button color="basic">SHARE</button>
+      <button mat-raised-button color="primary" [routerLink]="['/edit/', post._id]"
+        *ngIf="postDeletable && userId == post.creator">EDIT</button>
+      <span class="menu-spacer"></span>
+      <button mat-mini-fab color="accent" (click)="deletePost()" *ngIf="postDeletable && userId == post.creator">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-card-actions>
+      
+  </mat-card>
+
+<mat-expansion-panel class="mat-elevation-z3" style="user-select: none;" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Comments
+        </mat-panel-title>
+        <mat-panel-description>
+            {{panelOpenState ? 'Hide' : 'Show'}} Comments
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+   <div>
+    <form (ngSubmit)="newComment(f)" #f="ngForm" *ngIf="postDeletable">
+      <mat-form-field appearance="outline" style="width: 100%;">
+        <textarea matInput required type="text" rows="4" ngModel placeholder="Add Comment" name="comment"></textarea>
+      </mat-form-field>
+      <button [disabled]="f.invalid" mat-raised-button type="submit" color="primary">Comment</button>
+    </form>
+  </div>
+    <mat-card *ngFor="let comment of comments" class="mat-elevation-z2" style="margin: 5px 0;">
+      <p style="font-size: 15px;">{{comment.author}}</p>
+      <mat-card-subtitle>{{comment.opinion}}</mat-card-subtitle>
+    </mat-card>
+</mat-expansion-panel>
