--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="mat-elevation-z8 app-toolbar" color="primary">
-  <mat-toolbar-row>
+  <mat-toolbar-row class="">
     <button mat-button>
         <mat-icon >engineering</mat-icon>
         <a style="text-decoration: none; color: aliceblue; margin-left: 10px;font-size: 25px;" routerLink="/">Reddot</a>
@@ -11,9 +11,18 @@
       <a mat-button [routerLink]="'/login'" *ngIf="!userIsAuthenticated">Login</a>
       <a mat-button [routerLink]="'/signup'" *ngIf="!userIsAuthenticated">Signup</a>
       <button mat-button *ngIf="userIsAuthenticated" (click)="onLogout()">Logout</button>
+      <button mat-icon-button (click)="searchBar = !searchBar"><mat-icon>search</mat-icon></button>
     </div>
     <button mat-icon-button>
         <mat-icon (click)="onToggle();">menu</mat-icon>
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
+<mat-card *ngIf="searchBar">
+    <form #f="ngForm" (ngSubmit)="search(f)">
+        <mat-form-field  style="width: 100%;">
+          <input type="Search" matInput placeholder="Search by name" ngModel name="search" required>
+        </mat-form-field>
+        <button mat-stroked-button [disabled]="f.invalid" type="submit" color="accent">Search</button>
+    </form>
+</mat-card>
