--- a/src/app/layout/body/search-result/search-result.component.html
+++ b/src/app/layout/body/search-result/search-result.component.html
@@ -1,12 +1,13 @@
 <div>
     <div *ngFor="let user of users" class="user">
-        <div>
+        <div *ngIf="user.username !== currentUserName">
             <img class="avatar" [src]="'https://static.thenounproject.com/png/363640-200.png'" alt="user image">
         </div>
-        <div>
+        <div *ngIf="user.username !== currentUserName">
             <p>Name: {{user.name}}</p>
             <p>Email: {{user.email}}</p>
             <p>Username: {{user.username}}</p>
+            <button mat-raised-button color="primary" [routerLink]="['/conversation', user.username]">Text User</button>
         </div>
     </div>
 </div>
