--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -3,7 +3,7 @@
       <img mat-card-avatar class="example-header-image" [src]="'https://static.thenounproject.com/png/363640-200.png'" [alt]="'avatar'">
       <mat-card-title>{{post?.title}}</mat-card-title>
       <mat-card-subtitle>{{post?.creatorName}}</mat-card-subtitle>
-      <mat-card-subtitle>{{date}}</mat-card-subtitle>
+      <mat-card-subtitle>{{post?.date | date: 'short'}}</mat-card-subtitle>
     </mat-card-header>
   <img mat-card-image *ngIf="post?.imagePath" [src]="post?.imagePath" [alt]="post.title">
     <mat-card-content>
