--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar-row class="">
     <button mat-button>
         <mat-icon >engineering</mat-icon>
-        <a style="text-decoration: none; color: aliceblue; margin-left: 10px;font-size: 25px;" routerLink="/">Reddot</a>
+        <a style="text-decoration: none; color: black; margin-left: 10px;font-size: 25px;" routerLink="/">Reddot</a>
     </button>
     <span class="menu-spacer"></span>
     <button mat-button *ngIf="username" [style]="!usernameButton ? 'display: none;' : ''" class="username" (click)="onProfileClick()"><mat-icon>settings_accessibility</mat-icon> {{username}}</button>
