--- a/src/app/mess-list/mess-list.component.css
+++ b/src/app/mess-list/mess-list.component.css
@@ -1,10 +1,11 @@
 .messages {
-    margin: 10px 10px; 
+    margin: 0; 
     display: flex; 
     justify-content: center;
+    background-color: rgba(85, 85, 85, 0.205);
 }
 .item:hover {
-    background-color: whitesmoke;
+    background-color: rgb(214, 208, 208);
     cursor: pointer;
     user-select: none;
 }
