--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,31 @@
 <a #top></a>
 <app-status (postCreated)="onStatusUpdate($event)"></app-status>
-<app-post *ngFor="let post of posts" [userId]="userId" [post]="post" [username]="username" [postDeletable]="postDeletable" (commentCreated)="onCommentCreated($event)" class="feed"
-   (postDeleted)="deletePost($event)"></app-post>
+<ng-container *ngIf="postDeletable">
+   <app-post 
+      *ngFor="let post of posts" 
+      [userId]="userId" 
+      [post]="post" 
+      [username]="username" 
+      [postLiked]="userLikes.includes(post._id)"
+      [postDeletable]="postDeletable" 
+      (commentCreated)="onCommentCreated($event)"
+      class="feed"
+      (postDeleted)="deletePost($event)"
+   ></app-post>
+</ng-container>
+<ng-container *ngIf="!postDeletable">
+   <app-post 
+      *ngFor="let post of posts" 
+      [userId]="userId" 
+      [post]="post" 
+      [username]="username" 
+      [postLiked]="false"
+      [postDeletable]="postDeletable" 
+      (commentCreated)="onCommentCreated($event)"
+      class="feed"
+      (postDeleted)="deletePost($event)"
+   ></app-post>
+</ng-container>
 <mat-spinner *ngIf="!(posts.length > 0)" style="margin: 0 auto; margin-top: 50px;" [diameter]="50"></mat-spinner>
 <mat-paginator *ngIf="posts.length > 0" [length]="totalPosts" [pageSize]="postsPerPage"
   [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event); top.scrollIntoView()"></mat-paginator>
