--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -1,6 +1,6 @@
   <mat-card class="example-card mat-elevation-z3">
     <mat-card-header>
-      <img mat-card-avatar class="example-header-image" [src]="'https://static.thenounproject.com/png/363640-200.png'" [alt]="'avatar'">
+      <img mat-card-avatar class="example-header-image" [src]="'./assets/avatar.png'" [alt]="'avatar'">
       <mat-card-title>{{post?.title}}</mat-card-title>
       <mat-card-subtitle>{{post?.creatorName}}</mat-card-subtitle>
       <mat-card-subtitle>{{post?.date | date: 'short'}}</mat-card-subtitle>
@@ -12,8 +12,8 @@
       </p>
     </mat-card-content>
     <mat-card-actions style="display: flex;">
-      <button mat-stroked-button color="basic">LIKE</button>
-      <button mat-stroked-button color="basic">SHARE</button>
+      <button mat-stroked-button color="basic" (click)="likePost()" *ngIf="!postLiked && postDeletable">LIKE</button>
+      <button mat-stroked-button color="basic" (click)="unlikePost()" *ngIf="postLiked && postDeletable">UNLIKE</button>
       <button mat-raised-button color="primary" [routerLink]="['/edit/', post._id]"
         *ngIf="postDeletable && userId == post.creator">EDIT</button>
       <span class="menu-spacer"></span>
