--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -4,6 +4,7 @@
       <mat-card-title>{{post?.title}}</mat-card-title>
       <mat-card-subtitle>{{post?.creatorName}}</mat-card-subtitle>
       <mat-card-subtitle>{{post?.date | date: 'short'}}</mat-card-subtitle>
+      <mat-card-subtitle>{{likesCount}} Likes</mat-card-subtitle>
     </mat-card-header>
   <img mat-card-image *ngIf="post?.imagePath" [src]="post?.imagePath" [alt]="post.title">
     <mat-card-content>
