--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
         <mat-icon>clear</mat-icon> <span style="margin-left: 10px;">Close</span>
       </a>
       <a mat-list-item routerLink="/" (click)="drawer.toggle()"><mat-icon>store</mat-icon><span style="margin-left: 10px;">Home</span></a>
-      <a mat-list-item *ngIf="!userIsAuthenticated" routerLink="/login" (click)="drawer.toggle()"><mat-icon>fingerprint</mat-icon> <span style="margin-left: 10px;">Login</span></a>
-      <a mat-list-item *ngIf="!userIsAuthenticated" routerLink="/signup" (click)="drawer.toggle()"><mat-icon>account_circle</mat-icon> <span style="margin-left: 10px;">Signup</span></a>
+      <a mat-list-item *ngIf="!userIsAuthenticated" routerLink="auth/login" (click)="drawer.toggle()"><mat-icon>fingerprint</mat-icon> <span style="margin-left: 10px;">Login</span></a>
+      <a mat-list-item *ngIf="!userIsAuthenticated" routerLink="auth/signup" (click)="drawer.toggle()"><mat-icon>account_circle</mat-icon> <span style="margin-left: 10px;">Signup</span></a>
       <a mat-list-item *ngIf="userIsAuthenticated" routerLink="/create" (click)="drawer.toggle()"><mat-icon>add_circle_outline</mat-icon> <span style="margin-left: 10px;">Create Post</span></a>
       <a mat-list-item *ngIf="userIsAuthenticated" routerLink="/messages" (click)="drawer.toggle()"><mat-icon>message</mat-icon> <span style="margin-left: 10px;">Messages</span></a>
       <a mat-list-item *ngIf="userIsAuthenticated" (click)="drawer.toggle(); onLogout()"><mat-icon>eject</mat-icon> <span style="margin-left: 10px;">Logout</span></a>
