--- a/src/app/mess-list/mess-list.component.html
+++ b/src/app/mess-list/mess-list.component.html
@@ -1,7 +1,7 @@
 <mat-spinner [diameter]="50" style="margin: 10px auto;" *ngIf="!inbox"></mat-spinner>
 <div class="messages" *ngIf="inbox">
     <mat-list style="max-width: 600px;">
-        <mat-list-item *ngFor="let name of receivedNames" class="item" [routerLink]="['/conversation', name]">
+        <mat-list-item *ngFor="let name of receivedNames" class="item" [routerLink]="['/messages/conversation', name]">
             <img matListAvatar [src]="'./assets/avatar.png'" alt="...">
             <h3 matLine> {{name}} </h3>
             <p matLine>
