--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@
     height: 100%;
     border: 1px solid #555;
     background-color: rgba(85, 85, 85, 0.205);
+    
 }
 
 mat-drawer {
@@ -11,4 +12,16 @@ mat-drawer {
 mat-drawer-content {
     height: 100%;
     width: 100%;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+mat-drawer-content::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+mat-drawer-content {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
