--- a/src/app/layout/body/search-result/search-result.component.html
+++ b/src/app/layout/body/search-result/search-result.component.html
@@ -7,7 +7,7 @@
             <p>Name: {{user.name}}</p>
             <p>Email: {{user.email}}</p>
             <p>Username: {{user.username}}</p>
-            <button *ngIf="authed" mat-raised-button color="primary" [routerLink]="['/conversation', user.username]">Text User</button>
+            <button *ngIf="authed" mat-raised-button color="primary" [routerLink]="['/messages/conversation', user.username]">Text User</button>
         </div>
     </div>
 </div>
