--- a/src/app/layout/body/search-result/search-result.component.html
+++ b/src/app/layout/body/search-result/search-result.component.html
@@ -1,4 +1,4 @@
-<div >
+<div style="padding: 10px;">
     <div *ngFor="let user of users" class="user">
         <div *ngIf="user.username !== currentUserName">
             <img class="avatar" [src]="'https://static.thenounproject.com/png/363640-200.png'" alt="user image">
