--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,7 +5,7 @@
         <a style="text-decoration: none; color: black; margin-left: 10px;font-size: 25px;" routerLink="/">E-Shomaj</a>
     </button>
     <span class="menu-spacer"></span>
-    <button mat-button *ngIf="username" [style]="!usernameButton ? 'display: none;' : ''" class="username" (click)="onProfileClick()"><mat-icon>settings_accessibility</mat-icon> {{username}}</button>
+    <button mat-button *ngIf="username" [style]="!usernameButton ? 'display: none;' : ''" class="username" (click)="onProfileClick()"><mat-icon>settings_accessibility</mat-icon> Profile</button>
     <div class="nav-links">
       <a mat-button [routerLink]="'/create'" *ngIf="userIsAuthenticated">Create Post</a>
       <a mat-button [routerLink]="'auth/login'" *ngIf="!userIsAuthenticated">Login</a>
