--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,27 +1,30 @@
 .drawer-container {
-    width: 100%;
-    height: 100%;
-    border: 1px solid #555;
-    background-color: rgba(85, 85, 85, 0.205);
-    
+  width: 100%;
+  height: 100%;
+  border: 1px solid #555;
+  background-image: url("/assets/bg.jpg");
+  background-size: cover;
 }
-
+.mat-list-item {
+  color: #fff;
+}
 mat-drawer {
-    width: 200px;
+  width: 200px;
+  background-color: #212121;
 }
 mat-drawer-content {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 mat-drawer-content::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 /* Hide scrollbar for IE, Edge and Firefox */
 mat-drawer-content {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
