--- a/src/app/home/post/post.component.css
+++ b/src/app/home/post/post.component.css
@@ -1,13 +1,24 @@
 .example-card {
-    max-width: 85vw;
-    width: 400px;
-    padding: 15px;
-    margin: 10px auto;
-    margin-bottom: 5px;
+  max-width: 85vw;
+  width: 400px;
+  padding: 15px;
+  margin: 10px auto;
+  margin-bottom: 5px;
+  color: #fff;
+  background-color: #272626;
+}
+.mat-card-subtitle {
+  color: #fff;
 }
 .menu-spacer {
   flex: 1 1 auto;
 }
 .example-header-image {
   background-size: cover;
+}
+textarea {
+  color: #fff;
+}
+textarea::placeholder {
+  color: gray;
 }
