--- a/src/app/home/status/status.component.css
+++ b/src/app/home/status/status.component.css
@@ -10,7 +10,12 @@
   max-width: 600px;
   min-width: 200px;
 }
-
+textarea {
+  color: #fff;
+}
+textarea::placeholder {
+  color: gray;
+}
 .card {
   margin: 10px auto;
   display: flex;
@@ -19,6 +24,7 @@
   width: 400px;
   padding: 15px;
   flex-direction: row;
+  background-color: #272626;
 }
 .example-container {
   padding: 10px;
